Fix overlapping border

--- a/src/components/MainPage.module.css
+++ b/src/components/MainPage.module.css
@@ -21,7 +21,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* border-right: 2px solid black; */
+  border-right: 2px solid black;
+  margin-right: -2px;
 }
 
 .righPane {
